# artifacts/canvasops/src/types.ts
@@ -42,8 +42,6 @@ export type Project = {
   stageClass: string;
   status: string;
   statusClass: string;
-  progress: number;
-  totalProgress: number;
   teamId?: string;
 };
 
